fix aanna img relative link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			background: linear-gradient(355deg, rgba(250,159,115,1) 0%, rgba(247,184,133,1) 15%, rgba(124,136,152,1) 100%);
 			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fa9f73",endColorstr="#7c8898",GradientType=1);">
 		  		<div class="w-90 ba">
-				  <img src="/img/aanna@2x.png" />
+				  <img src="img/aanna@2x.png" />
 				</div>
 				<div class="self-end w-100 flex flex-wrap items-stretch mb2 ba">
 					<div class="w-40-m w-30-l w-90 ml6-ns ml4-m ml2 ba">
