--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		.josefin {
 			font-family: 'Josefin Sans', sans-serif;
 		}
-		h2, a {
+		h2, h3, a {
 			font-weight: 600;
 		}
 		p {
@@ -22,6 +22,7 @@
 		}
 		a {
 			color: white;
+			text-decoration: none;
 		}
 	
 	</style>
@@ -29,24 +30,24 @@
 	<body class="w-100 josefin bg-white">
 		
 		<div class="">
-			<div class="flex flex-wrap min-vh-100 dt w-100 white ba" style="background: rgb(250,159,115);
+			<div class="flex flex-wrap items-center min-vh-100 dt w-100 white " style="background: rgb(250,159,115);
 			background: -moz-linear-gradient(355deg, rgba(250,159,115,1) 0%, rgba(247,184,133,1) 15%, rgba(124,136,152,1) 100%);
 			background: -webkit-linear-gradient(355deg, rgba(250,159,115,1) 0%, rgba(247,184,133,1) 15%, rgba(124,136,152,1) 100%);
 			background: linear-gradient(355deg, rgba(250,159,115,1) 0%, rgba(247,184,133,1) 15%, rgba(124,136,152,1) 100%);
 			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fa9f73",endColorstr="#7c8898",GradientType=1);">
-		  		<div class="w-90 ba">
+		  		<div class="w-90 self-start ">
 				  <img src="img/aanna@2x.png" />
 				</div>
-				<div class="self-end w-100 flex flex-wrap items-stretch mb2 ba">
-					<div class="w-40-m w-30-l w-90 ml6-ns ml4-m ml2 ba">
+				<div class=" w-100 flex flex-wrap mb2 ">
+					<div class="w-40-m w-30-l w-90 ml6-ns ml4-m ml2 ">
 						<h2>About Aanna</h2>
 						<p>Aanna Greer is a writer, speaker, wife, and mother -- whose passion is connecting women to God and to each other.</p>
-						<p><a href="#contact" class="">Contact</a></p>
+						<h3><a href="#contact" class="bb pa1 nl1 dim">Contact &darr;</a></h3>
 					</div>
-					<div class="w-40-m w-30-l w-90 ml6-ns ml4-m ml2 ba">
+					<div class="w-40-m w-30-l w-90 ml6-ns ml4-m ml2 ">
 						<h2>Darling Book</h2>
 						<p>Darling offers a fresh perspective and a biblical understanding of womanhood, sexuality, and marriage. In it, you will learn to think about sex the way God does, keep your sexual desires from controlling you, prepare your body, mind and soul for sex, and create an intimate, godly and satisfying sex life with your husband.</p>
-						<p><a href="#contact" class="">More</a></p>
+						<h3><a href="http://bit.ly/aacartdarling" class="bb pa1 nl1 dim">More &nearr;</a></h3>
 					</div>	
 				</div>
 				
