install line awesome font for link arrows

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com"> 
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;600&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 	<style>
 		.josefin {
 			font-family: 'Josefin Sans', sans-serif;
@@ -42,12 +43,12 @@
 					<div class="w-40-m w-30-l w-90 ml6-ns ml4-m ml2 ">
 						<h2>About Aanna</h2>
 						<p>Aanna Greer is a writer, speaker, wife, and mother -- whose passion is connecting women to God and to each other.</p>
-						<h3><a href="#contact" class="bb pa1 nl1 dim">Contact &darr;</a></h3>
+						<h3><a href="#contact" class="bb pa1 nl1 dim">Contact <i class="las la-arrow-down"></i></a></h3>
 					</div>
 					<div class="w-40-m w-30-l w-90 ml6-ns ml4-m ml2 ">
 						<h2>Darling Book</h2>
 						<p>Darling offers a fresh perspective and a biblical understanding of womanhood, sexuality, and marriage. In it, you will learn to think about sex the way God does, keep your sexual desires from controlling you, prepare your body, mind and soul for sex, and create an intimate, godly and satisfying sex life with your husband.</p>
-						<h3><a href="http://bit.ly/aacartdarling" class="bb pa1 nl1 dim">More &nearr;</a></h3>
+						<h3><a href="http://bit.ly/aacartdarling" class="bb pa1 nl1 dim">More <i class="las la-external-link-alt"></i></a></h3>
 					</div>	
 				</div>
 				
