--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="author" content="Logan">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Polyfill to enable smoothscroll for the JavaScript APIs -->
+	<script src="https://unpkg.com/smoothscroll-polyfill/dist/smoothscroll.min.js"></script>
+	<!-- Apply the smoothscroll to anchor links -->
+	<script src="https://unpkg.com/smoothscroll-anchor-polyfill"></script>
+	
 	<link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com"> 
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 	<style>
+		html {
+			--scroll-behavior: smooth;
+			scroll-behavior: smooth;
+		}
 		.josefin {
 			font-family: 'Josefin Sans', sans-serif;
 		}
@@ -53,6 +62,18 @@
 				</div>
 				
 			</div>
+		</div>
+		
+		<div id="contact" class="">
+			<h2>Test</h2>
+			<p>Darling offers a fresh perspective and a biblical understanding of womanhood, sexuality, and marriage. In it, you will learn to think about sex the way God does, keep your sexual desires from controlling you, prepare your body, mind and soul for sex, and create an intimate, godly and satisfying sex life with your husband.</p>
+			
+			<p>Darling offers a fresh perspective and a biblical understanding of womanhood, sexuality, and marriage. In it, you will learn to think about sex the way God does, keep your sexual desires from controlling you, prepare your body, mind and soul for sex, and create an intimate, godly and satisfying sex life with your husband.</p>
+			
+			<p>Darling offers a fresh perspective and a biblical understanding of womanhood, sexuality, and marriage. In it, you will learn to think about sex the way God does, keep your sexual desires from controlling you, prepare your body, mind and soul for sex, and create an intimate, godly and satisfying sex life with your husband.</p>
+			
+			<p>Darling offers a fresh perspective and a biblical understanding of womanhood, sexuality, and marriage. In it, you will learn to think about sex the way God does, keep your sexual desires from controlling you, prepare your body, mind and soul for sex, and create an intimate, godly and satisfying sex life with your husband.</p>
+			
 		</div>
 	
 	</body></html>
