--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 			background: -webkit-linear-gradient(355deg, rgba(250,159,115,1) 0%, rgba(247,184,133,1) 15%, rgba(124,136,152,1) 100%);
 			background: linear-gradient(355deg, rgba(250,159,115,1) 0%, rgba(247,184,133,1) 15%, rgba(124,136,152,1) 100%);
 			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fa9f73",endColorstr="#7c8898",GradientType=1);
+			
 			background-size: 150% 150%;
 			
 			-webkit-animation: AnimationName 30s ease infinite;
@@ -63,74 +64,71 @@
 			50%{background-position:56% 100%}
 			100%{background-position:45% 0%}
 		}
-		.big-title {
+		.hidden-title {
 			font-size: 0;
 			width: 0;
 			height: 0;
 			color: transparent;
 		}
+		input, textarea {border: none; border: 0; outline:0;}
+		section.contact {background: rgba(124,136,152,1);}
 	</style>
 	
 	<body class="w-100 josefin bg-white">
-		
-		<div class="">
-			<div class="flex flex-wrap items-center dt w-100 white animated-header" >
-		  		<div class="w-90 self-start ">
-				  <h1 class="big-title">Aanna</h1>
-				  <img src="img/aanna@2x.png" />
-				</div>
-				<div class=" w-100 flex flex-wrap mb2 ">
-					<div class="w-40-m w-30-l w-80 ml6-ns ml4-m ml4 ">
-						<h2>About Aanna</h2>
-						<p>Aanna Greer is a writer, speaker, wife, and mother -- whose passion is connecting women to God and to each other.</p>
-						<h3><a href="#contact" class="bb pa1 nl1 dim">Contact <i class="las la-arrow-down"></i></a></h3>
-					</div>
-					<div class="w-40-m w-30-l w-80 ml6-ns ml4-m ml4 ">
-						<h2>Darling Book</h2>
-						<p>Darling offers a fresh perspective and a biblical understanding of womanhood, sexuality, and marriage. In it, you will learn to think about sex the way God does, keep your sexual desires from controlling you, prepare your body, mind and soul for sex, and create an intimate, godly and satisfying sex life with your husband.</p>
-						<h3><a href="http://bit.ly/aacartdarling" class="bb pa1 nl1 dim">More <i class="las la-external-link-alt"></i></a></h3>
-					</div>	
-				</div>
-				
+		<section class="w-100 white animated-header">
+	  		<div class="w-90 mb5-l mb4-m mb3 db">
+			  <h1 class="hidden-title">Aanna</h1>
+			  <img src="img/aanna@2x.png" />
 			</div>
-		</div>
-		
-		<div id="contact" class="">
-			<script type="text/javascript">var submitted=false;</script>
-			 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='/message-confirmation';}"></iframe>
+			<div class="w-100 flex flex-wrap mb2">
+				<div class="w-40-m w-30-l w-80 ml6-ns ml4-m ml4 ">
+					<h2>About Aanna</h2>
+					<p>Aanna Greer is a writer, speaker, wife, and mother -- whose passion is connecting women to God and to each other.</p>
+					<h3><a href="#contact" class="bb pa1 nl1 dim">Contact <i class="las la-arrow-down"></i></a></h3>
+				</div>
+				<div class="w-40-m w-30-l w-80 ml6-ns ml4-m ml4 ">
+					<h2>Darling Book</h2>
+					<p>Darling offers a fresh perspective and a biblical understanding of womanhood, sexuality, and marriage. In it, you will learn to think about sex the way God does, keep your sexual desires from controlling you, prepare your body, mind and soul for sex, and create an intimate, godly and satisfying sex life with your husband.</p>
+					<h3><a href="http://bit.ly/aacartdarling" class="bb pa1 nl1 dim">More <i class="las la-external-link-alt"></i></a></h3>
+				</div>	
+			</div>
+			
+		</section>
+
+		<section class="contact flex flex-wrap justify-center">
+			<div class="pv7 w-50-l w-60-m w-80">
+				<h2 id="contact">Contact Aanna</h2>
+				<div class="w-100">
+					<script type="text/javascript">var submitted=false;</script>
+					<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='/message-confirmation';}"></iframe>
 					<form 
 					action="https://docs.google.com/forms/d/e/1FAIpQLScsmV9-wa_szR-gD6uxItsvkvlNOl6jePYrRHQcG1e5TRD6GQ/formResponse" 
 					method="POST" 
 					target="hidden_iframe" 
 					onsubmit="submitted=true;" 
 					/>
-						<div class="fields flex">
-							<div class="field input-reset">
-								<label for="name">Name</label>
-								<input class="input-reset ba bg-white" type="text" name="entry.1962109541" id="name" required="true" />
+						<div class="fields">
+							<div class="field">
+								<label class="b db mt2 mb2" for="name">Name</label>
+								<input class="black db w-100" type="text" name="entry.1962109541" id="name" required="true" />
 							</div>
 							<div class="field">
-								<label for="email">Email</label>
-								<input class="input-reset" type="email" name="entry.2125584458" id="email" required="true" />
+								<label class="b db mt4 mb2" for="email">Email</label>
+								<input class="black db w-100" type="email" name="entry.2125584458" id="email" required="true" />
 							</div>
 							<div class="field">
-								<label for="message">Message</label>
-								<textarea class="input-reset" name="entry.1823759850" id="message" rows="3" required="true"></textarea>
+								<label class="b db mt4 mb2" for="message">Message</label>
+								<textarea class="black db w-100" name="entry.1823759850" id="message" rows="4" required="true"></textarea>
 							</div>
 						</div>
 						<ul class="actions">
-							<li><input class="input-reset button-reset" type="submit" value="Send Message" /></li>
+							<li><input class="" type="submit" value="Send Message" /></li>
 						</ul>
 					</form>
-			<h2>Test</h2>
-			<p>Darling offers a fresh perspective and a biblical understanding of womanhood, sexuality, and marriage. In it, you will learn to think about sex the way God does, keep your sexual desires from controlling you, prepare your body, mind and soul for sex, and create an intimate, godly and satisfying sex life with your husband.</p>
-			
-			<p>Darling offers a fresh perspective and a biblical understanding of womanhood, sexuality, and marriage. In it, you will learn to think about sex the way God does, keep your sexual desires from controlling you, prepare your body, mind and soul for sex, and create an intimate, godly and satisfying sex life with your husband.</p>
-			
-			<p>Darling offers a fresh perspective and a biblical understanding of womanhood, sexuality, and marriage. In it, you will learn to think about sex the way God does, keep your sexual desires from controlling you, prepare your body, mind and soul for sex, and create an intimate, godly and satisfying sex life with your husband.</p>
-			
-			<p>Darling offers a fresh perspective and a biblical understanding of womanhood, sexuality, and marriage. In it, you will learn to think about sex the way God does, keep your sexual desires from controlling you, prepare your body, mind and soul for sex, and create an intimate, godly and satisfying sex life with your husband.</p>
-			
-		</div>
+				</div>
+			</div>
+
+		</section>
+		
 	
 	</body></html>
