--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 		input, textarea, #contact {border: none; border: 0; outline:0;}
 		section.contact {background: rgba(124,136,152,1);}
 		
+		footer {background: rgba(32,38,45,1);}
+		
 		/* form styles */
 		.form {
 			  /* background-color: #15172b;
@@ -102,7 +104,7 @@
 			
 			.input {
 			  /* background-color: rgb(0,0,0,.2); */
-			  background-color: rgb(255,255,255,.2);
+			  background-color: rgba(255,255,255,.2);
 			  border-radius: 0px;
 			  border: 0;
 			  box-sizing: border-box;
@@ -144,7 +146,7 @@
 			}
 			
 			.placeholder {
-			  color: rgb(255,255,255,.4);
+			  color: rgba(255,255,255,.4);
 			  /* color: rgb(0,0,0,.2); */
 			  left: 20px;
 			  line-height: 14px;
@@ -251,7 +253,7 @@
 		</section>
 		
 		<footer class="flex justify-center">
-			<div class="pv7-l pv6-m pv4 w-50-l w-60-m w-80 tc">
+			<div class="pv5-l pv4-m pv3 w-50-l w-60-m w-80 tc white">
 				&copy;<script>document.write( new Date().getFullYear() );</script> Aanna Greer
 			</div>
 		</footer>
