--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 				<h2 id="contact" class="white pt6-l pt5-m">Contact Aanna</h2>
 				<div class="w-100 pb6-l pb5-m">
 					<script type="text/javascript">var submitted=false;</script>
-					<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='/message-sent.html';}"></iframe>
+					<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='message-sent.html';}"></iframe>
 					<form 
 					action="https://docs.google.com/forms/d/e/1FAIpQLScsmV9-wa_szR-gD6uxItsvkvlNOl6jePYrRHQcG1e5TRD6GQ/formResponse" 
 					method="POST" 
