--- a/message-sent.html
+++ b/message-sent.html
@@ -82,7 +82,7 @@
 		  	<div class="tc">
 		  		<h1 class="f-headline-ns f-5">Message sent!</h1>
 				<p>Thanks for reaching out.</p>
-				<h3><a href="aannagreer.com" class="bb pa1 nl1 dim"><i class="las la-arrow-left"></i> Back to aannagreer.com</a></h3>
+				<h3><a href="/" class="bb pa1 nl1 dim"><i class="las la-arrow-left"></i> Back to aannagreer.com</a></h3>
 			</div>
 			
 		</section>
