Changed body background color

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 			--scroll-behavior: smooth;
 			scroll-behavior: smooth;
 		}
+		body {
+			background: rgba(32,38,45,1); 
+		}
 		.josefin {
 			font-family: 'Josefin Sans', sans-serif;
 		}
